--- a/localisation/TD_estate_names_l_english.yml
+++ b/localisation/TD_estate_names_l_english.yml
@@ -4,6 +4,7 @@
  estate_drotaci: "Drotaci"
  estate_yujihadga: "Yujihadga"
  estate_usra_clans: "Afradusran"
+ estate_slechte: "Slëchte"
  #Clergy
  estate_matahri: "Matahari"
  estate_shanhohn: "Shanhohn"
