Dorchean estate names

--- a/localisation/TD_estate_names_l_english.yml
+++ b/localisation/TD_estate_names_l_english.yml
@@ -5,11 +5,13 @@
  estate_yujihadga: "Yujihadga"
  estate_usra_clans: "Afradusran"
  estate_slechte: "Slëchte"
+ estate_tiarnai: "Tiarnaí "
  #Clergy
  estate_matahri: "Matahari"
  estate_shanhohn: "Shanhohn"
  estate_priesthood: "Priesthood"
  estate_zimbuksi: "Zimbuksi"
+ estate_saltoir: "Sáltóir"
  #Merchants
 
  #Cossacks
