--- a/localisation/TD_estate_names_l_english.yml
+++ b/localisation/TD_estate_names_l_english.yml
@@ -5,7 +5,8 @@
  estate_yujihadga: "Yujihadga"
  estate_usra_clans: "Afradusran"
  estate_slechte: "Slëchte"
- estate_tiarnai: "Tiarnaí "
+ estate_tiarnai: "Tiarnaí"
+ estate_marchantes: "Marchantes"
  #Clergy
  estate_matahri: "Matahari"
  estate_shanhohn: "Shanhohn"
@@ -13,7 +14,8 @@
  estate_zimbuksi: "Zimbuksi"
  estate_saltoir: "Sáltóir"
  #Merchants
-
+ estate_oligarchs: "Oligárches"
+ estate_brysawgar: "Bryšawgari"
  #Cossacks
  estate_ratsunikud: "Ratsunikud"
  estate_kakigos: "Kakigos"
