pamkusea mt adjustments

--- a/localisation/TD_01_Flavour_Pamkusea_l_english.yml
+++ b/localisation/TD_01_Flavour_Pamkusea_l_english.yml
@@ -26,10 +26,10 @@
  pamkusea.5.a: "Fund the missionaries, we will convert these dissenters!"
  pamkusea.5.b: "Allow the religious freedom, for now.."
  pamkusea.5_tt: "We will be able to choose between Missionary Strength or No penalties associated with negative religious tolerance."
- pamkusea.6.t: "Ethnic Future of our Pamkusean Realm"
- pamkusea.6.desc: " "
- pamkusea.6.a: "All cultures are welcome! (Multiethnic Path)"
- pamkusea.6.b: "We are superior to others! (Monoethnic Path)"
+ pamkusea.6.t: "Question of assimilation"
+ pamkusea.6.desc: "With our growing influence, more and more foreigners are living in our borders. In order to increase the stability of our realm and govern it much more efficiently, we must decide how to manage those minorities and majorities."
+ pamkusea.6.a: "We must accept all ways of life. (Multicultural Path)"
+ pamkusea.6.b: "Our culture is clearly superior! (Cultural Domination Path)"
 
  pamapoikia_ideas: "Pamapoikian Ideas"
  pamapoikia_ideas_bonus: "Pamapoikian Ambition"
