--- a/localisation/TD_01_flavour_hestan_l_english.yml
+++ b/localisation/TD_01_flavour_hestan_l_english.yml
@@ -1,6 +1,7 @@
 ﻿l_english:
  restore_gmitar_title: "Restore Gmitar"
  restore_gmitar_desc: "Ancient City of Gmitar has fallen to the Bunelisuli horde many years ago. Now that the dust has settled, we will resettle this important trading post."
+ restore_gmitar_tt: "We will some resettle our population to Gmitar."
  WAPETYAH: "Wapetyah"
  wapetya_sapsy_reform: "Wapetya Sapsy"
  wapetya_sapsy_reform_desc: "Hestani rulers are seen as messengers of Gods who rule these lands in their name, later to ascend to godhood themselves."
@@ -104,6 +105,8 @@
  great_temple_nahitar: "Great Monument"
  desc_great_temple_nahitar: "This province has an extravagant temple dedicated to a specific God."
  has_any_deity_tt: "Has any personal deity"
+ nahitar_seeking_splendor: "Seeking Splendor"
+ desc_nahitar_seeking_splendor: "After constructing a wonder in the capital, many seek a new site for the court of [Root.Monarch.GetTitle]"
  gain_mana_from_death: "Gain 30 mana per heir skill above 3:"
  decrease_devotion_tt: "Decrease §MDevotion§! level by 1"
  increase_devotion_tt: "Increase §MDevotion§! level by 1"
