wasteland + ruler change

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1229,7 +1229,7 @@
  PROV1228: "Sephogos"
  PROV1229: "Mesymenea"
  PROV1230: "Nefapont"
- PROV1231: "Sunbati Coast"
+ PROV1231: "Bay of Nuqat"
  PROV1232: "Hyncae"
  PROV1233: "Apahlamke"
  PROV1234: "Eastern Arctic Sea"
@@ -2520,7 +2520,7 @@
  PROV2519: "Yechaqa"
  PROV2520: "2520"
  PROV2521: "Wiojoke"
- PROV2522: "2522"
+ PROV2522: "Hitraan"
  PROV2523: "Teak"
  PROV2524: "Yakhari"
  PROV2525: "Wichthara"
