--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -269,9 +269,9 @@
  luetan_naval_resurgence: "Naval Resurgence"
  luetan_naval_resurgence_desc: "River barges have made it easy to traverse vast amounts of resources quickly compared to using pack animals or carriages, allowing for expanded trade and travel all across the land. While in the past our ancestors once sailed on the coasts of Tsutan, their knowledge has still come useful further inland and perhaps in the future we will sail the waves once more."
 
- bulghaen_ideas: "Bulghaen Ideas"
- bulghaen_ideas_bonus: "Bulghaen Ambition"
- bulghaen_ideas_start: "Bulghaen Traditions"
+ bulghaen_ideas: "Bulghen Ideas"
+ bulghaen_ideas_bonus: "Bulghen Ambition"
+ bulghaen_ideas_start: "Bulghen Traditions"
  bulghaen_three_thousand_armed_men: "Three Thousand Armed Men"
  bulghaen_three_thousand_armed_men_desc: "\"Three thousand armed men, their blades of steel\nMarched to the shore, where waves would kneel.\"\n-excerpt from The Tides of Hangchan, written by Yujihadga Yu Yul-Sun.\n\nThe first arrival of the Heisean empire upon the shores of Moongma was described with a large show of force of a legendary army carving out an area for a new colony, as a gift to the Heisean Emperor. Their story is well remembered by our military who strive to bring the mythical imagery to the eyes of their enemies."
  bulghaen_bungi_haven: "Bungi Haven"
@@ -287,9 +287,9 @@
  bulghaen_northern_xifang_sects: "Northern Xifang Sects"
  bulghaen_northern_xifang_sects_desc: "Bulghaen has long respected many local faiths on our lands and with the growth of the Xifang sects as migrants arrived. Since the Xifang still respect the local folklore of our lands, there have not been many conflicts between the differing faiths, allowing for discourse and philosophy to flourish especially in the urban centers of the nation. Arriving from mainland Heisean, Lam and Xun, they now seek to spread their faith to all."
 
- shanshue_ideas: "Shanshue Ideas"
- shanshue_ideas_start: "Shanshue Traditions"
- shanshue_ideas_bonus: "Shanshue Ambition"
+ shanshue_ideas: "Shanshuean Ideas"
+ shanshue_ideas_start: "Shanshuean Traditions"
+ shanshue_ideas_bonus: "Shanshuean Ambition"
  shanshue_kwaang_influence: "Kwaang Influence"
  shanshue_kwaang_influence_desc: "In 672 AI, the Kwaang dynasty was cast out of Moongma by the Lam dynasty, their claimants escaping to Daimin. Bound with a treaty to receive lands on the Island of Daimin, they were forbidden from staging a war to retake their former lands from Lam.\n\nYet, with the election of Kwaang Xiang and his next ten descendants to rule as Zhuquans of Shanshue in 1312 AI, the dynasty has left Daimin, wishing to again rule over Moongma, forsaking the sanctuary given by the Dai.\n\nHowever, the title was not one without responsibility, needing to respect the traditions of not only Xianga faith, but also the local tradition present in the lands. Highly educated and trained to rule, the Kwaang dynasty have proved to be excellent rulers chosen by the heavens."
  shanshue_guardians_of_kwaazim: "Guardians of Kwaazim"
