Blankiam Prov names
with some lakes and three sea tiles named

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1890,10 +1890,10 @@
  PROV1889: "Tactawick"
  PROV1890: "1890"
  PROV1891: "Nufekha"
- PROV1892: "1892"
- PROV1893: "1893"
- PROV1894: "1894"
- PROV1895: "1895"
+ PROV1892: "Kapusiut"
+ PROV1893: "Igimak"
+ PROV1894: "Akuagaa"
+ PROV1895: "Agiinaktuk"
  PROV1896: "Forswigians"
  PROV1897: "Peathaod"
  PROV1898: "Shawdurth"
@@ -1902,18 +1902,18 @@
  PROV1901: "Gahdemithook"
  PROV1902: "Susunogoen"
  PROV1903: "Shawin"
- PROV1904: "1904"
- PROV1905: "1905"
+ PROV1904: "Ulu"
+ PROV1905: "Akkaugaa"
  PROV1906: "Kessyemethook"
- PROV1907: "1907"
- PROV1908: "1908"
- PROV1909: "1909"
- PROV1910: "1910"
- PROV1911: "1911"
+ PROV1907: "Usriat"
+ PROV1908: "Siiksuk"
+ PROV1909: "Aullaktuk"
+ PROV1910: "Amik"
+ PROV1911: "Tikkuaktuk"
  PROV1912: "Forstland"
- PROV1913: "1913"
+ PROV1913: "Uuyurat"
  PROV1914: "1914"
- PROV1915: "1915"
+ PROV1915: "Kanniggiks"
  PROV1916: "Minisians"
  PROV1917: "Minisians"
  PROV1918: "Minisians"
@@ -1949,10 +1949,10 @@
  PROV1948: "1948"
  PROV1949: "Costervan Sea"
  PROV1950: "Hadyachutook"
- PROV1951: "1951"
- PROV1952: "1952"
- PROV1953: "1953"
- PROV1954: "1954"
+ PROV1951: "Analati"
+ PROV1952: "Kinuinak"
+ PROV1953: "Saagaktuk"
+ PROV1954: "Kikuyat"
  PROV1955: "Parahaw"
  PROV1956: "Hasrat"
  PROV1957: "Aparati"
@@ -2221,7 +2221,7 @@
  PROV2220: "2220"
  PROV2221: "Bešazarg"
  PROV2222: "2222"
- PROV2223: "2223"
+ PROV2223: "Anaaklik Lake"
  PROV2224: "Drayabaz"
  PROV2225: "Samadigar"
  PROV2226: "Wastargal"
@@ -2237,7 +2237,7 @@
  PROV2236: "Gurkan"
  PROV2237: "Harii"
  PROV2238: "Jatunara"
- PROV2239: "2239"
+ PROV2239: "Kaalgik Lake"
  PROV2240: "Intibats"
  PROV2241: "Kullas"
  PROV2242: "Jatunara"
@@ -2252,7 +2252,7 @@
  PROV2251: "Mayurai"
  PROV2252: "Utyasan"
  PROV2253: "Jawurai"
- PROV2254: "2254"
+ PROV2254: "Ivugak Lake"
  PROV2255: "Maqkuch"
  PROV2256: "Chatuk"
  PROV2257: "Chewaluy"
@@ -2262,17 +2262,17 @@
  PROV2261: "Utujapa"
  PROV2262: "Sirujawa"
  PROV2263: "Chayunga"
- PROV2264: "2264"
+ PROV2264: "Mitik Lake"
  PROV2265: "Puncha"
  PROV2266: "Mamaqocha"
  PROV2267: "Matepuchka"
  PROV2268: "Chikalata"
  PROV2269: "Randmuna"
- PROV2270: "2270"
+ PROV2270: "Uminmak Lake"
  PROV2271: "Iloallpa"
  PROV2272: "Killatla"
  PROV2273: "Macalpa"
- PROV2274: "2274"
+ PROV2274: "Tiritchik Lake"
  PROV2275: "Nanatrwa"
  PROV2276: "Ashabil"
  PROV2277: "Puchpushta"
@@ -2281,7 +2281,7 @@
  PROV2280: "Menteka"
  PROV2281: "Kakasach"
  PROV2282: "Uskilancha"
- PROV2283: "2283"
+ PROV2283: "Uvlugiak Lake"
  PROV2284: "2284"
  PROV2285: "Casrana"
  PROV2286: "Saota"
@@ -2291,9 +2291,9 @@
  PROV2290: "Iloqner"
  PROV2291: "Purangak"
  PROV2292: "2292"
- PROV2293: "2293"
+ PROV2293: "Kanag Lake"
  PROV2294: "Karajut"
- PROV2295: "2295"
+ PROV2295: "Kanayuk Lake"
  PROV2296: "2296"
  PROV2297: "Suklatan"
  PROV2298: "Tode"
@@ -2349,9 +2349,9 @@
  PROV2348: "2348"
  PROV2349: "2349"
  PROV2350: "2350"
- PROV2351: "2351"
- PROV2352: "2352"
- PROV2353: "2353"
+ PROV2351: "Elin's Pass"
+ PROV2352: "Saatkaak Bay"
+ PROV2353: "Kanayuk Bay"
  PROV2354: "2354"
  PROV2355: "2355"
  PROV2356: "2356"
@@ -2550,38 +2550,38 @@
  PROV2549: "Huacu"
  PROV2550: "Sha'ia"
  PROV2551: "Tiyahkikwa"
- PROV2552: "2552"
+ PROV2552: "Aunnik"
  PROV2553: "Tangkan Bay"
- PROV2554: "2554"
- PROV2555: "2555"
+ PROV2554: "Sarri"
+ PROV2555: "Samna"
  PROV2556: "2556"
  PROV2557: "2557"
  PROV2558: "Bashipistan Coast"
- PROV2559: "2559"
- PROV2560: "2560"
- PROV2561: "2561"
- PROV2562: "2562"
- PROV2563: "2563"
+ PROV2559: "Paungak"
+ PROV2560: "Ukhak"
+ PROV2561: "Kunulik"
+ PROV2562: "Katiktikigak"
+ PROV2563: "Anuyaktuk"
  PROV2564: "2564"
  PROV2565: "2565"
- PROV2566: "2566"
+ PROV2566: "Igliktuk"
  PROV2567: "2567"
- PROV2568: "2568"
- PROV2569: "2569"
- PROV2570: "2570"
- PROV2571: "2571"
- PROV2572: "2572"
+ PROV2568: "Avvana"
+ PROV2569: "Kapiruk"
+ PROV2570: "Ittuk"
+ PROV2571: "Kigunnik"
+ PROV2572: "Minitkaa"
  PROV2573: "2573"
- PROV2574: "2574"
+ PROV2574: "Nalauttuk"
  PROV2575: "2575"
- PROV2576: "2576"
+ PROV2576: "Pasiaktuk"
  PROV2577: "2577"
- PROV2578: "2578"
- PROV2579: "2579"
+ PROV2578: "Ivaktuk"
+ PROV2579: "Kiirak"
  PROV2580: "Haenam Gulf"
- PROV2581: "2581"
- PROV2582: "2582"
- PROV2583: "2583"
+ PROV2581: "Kaugriruk"
+ PROV2582: "Naaruk"
+ PROV2583: "Naattuk"
  PROV2584: "Poohabi"
  PROV2585: "Gichamoop"
  PROV2586: "Michada"
@@ -2905,11 +2905,11 @@
  PROV2904: "Gizhapiapa"
  PROV2905: "Oketa"
  PROV2906: "2906"
- PROV2907: "2907"
- PROV2908: "2908"
- PROV2909: "2909"
+ PROV2907: "Apunland"
+ PROV2908: "Tagiuk"
+ PROV2909: "Kagruk"
  PROV2910: "2910"
- PROV2911: "2911"
+ PROV2911: "Saatkaak"
  PROV2912: "2912"
  PROV2913: "2913"
  PROV2914: "2914"
@@ -2979,45 +2979,45 @@
  PROV2978: "2978"
  PROV2979: "2979"
  PROV2980: "2980"
- PROV2981: "2981"
- PROV2982: "2982"
+ PROV2981: "Nutagak"
+ PROV2982: "Apuntuuk"
  PROV2983: "2983"
- PROV2984: "2984"
- PROV2985: "2985"
- PROV2986: "2986"
- PROV2987: "2987"
- PROV2988: "2988"
- PROV2989: "2989"
+ PROV2984: "Kitchak"
+ PROV2985: "Nanukin"
+ PROV2986: "Piayaak"
+ PROV2987: "Allik"
+ PROV2988: "Kullik"
+ PROV2989: "Aularuk"
  PROV2990: "2990"
  PROV2991: "2991"
  PROV2992: "2992"
  PROV2993: "2993"
  PROV2994: "2994"
- PROV2995: "2995"
- PROV2996: "2996"
- PROV2997: "2997"
+ PROV2995: "Panmapak"
+ PROV2996: "Maalgutkig"
+ PROV2997: "Igutchak"
  PROV2998: "2998"
- PROV2999: "2999"
- PROV3000: "3000"
- PROV3001: "3001"
+ PROV2999: "Aasrivak"
+ PROV3000: "Sivullik"
+ PROV3001: "Sivisurukpags"
  PROV3002: "3002"
  PROV3003: "3003"
  PROV3004: "3004"
  PROV3005: "3005"
- PROV3006: "3006"
- PROV3007: "3007"
- PROV3008: "3008"
+ PROV3006: "Akiruk"
+ PROV3007: "Anugi"
+ PROV3008: "Kunikłuk"
  PROV3009: "3009"
  PROV3010: "3010"
  PROV3011: "3011"
- PROV3012: "3012"
+ PROV3012: "Atiruk"
  PROV3013: "3013"
- PROV3014: "3014"
- PROV3015: "3015"
- PROV3016: "3016"
- PROV3017: "3017"
- PROV3018: "3018"
- PROV3019: "3019"
+ PROV3014: "Tiritchikikiktak"
+ PROV3015: "Kilak"
+ PROV3016: "Nuvirat"
+ PROV3017: "Tukkuk"
+ PROV3018: "Kilgich"
+ PROV3019: "Siku"
  PROV3020: "3020"
  PROV3021: "3021"
  PROV3022: "3022"
