--- a/localisation/TD_01_flavour_geniburgh_company_l_english.yml
+++ b/localisation/TD_01_flavour_geniburgh_company_l_english.yml
@@ -13,7 +13,7 @@
  
  ability_geniburgh_company_mechanic: "Kakigian Settling Mechanic"
  geniburgh_mercenary_power: "Reformation Effort"
- geniburgh_mercenary_power_desc: "Defines how close Geniburgh Company is close to reforming into a proper country.\n§YIncreased by:§!\n -being over governing capacity\n -granting specific privileges\n -promoting local cultures\n -having high republican tradition\n -having high ruler administrative skill\n§YDecreased by:§!\n -having high average autonomy\n -having high ruler military skill"
+ geniburgh_mercenary_power_desc: "Defines how close Geniburgh Company is close to reforming into a proper country.\n§YIncreased by:§!\n -Being over Governing Capacity\n -Granting specific Privileges\n -Promoting local cultures\n -Having high Republican Tradition\n -Having high ruler Administrative Skill\n§YDecreased by:§!\n -Having high Average Autonomy\n -Having high ruler Military Skill"
  monthly_geniburgh_mercenary_power: "Monthly Reformation Effort"
  geniburgh_mercenary_power_gain_modifier: "Reformation Effort Modifier"
  geniburgh_decrease_power: "Raise the Recruits"
