--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -129,6 +129,7 @@
  musatemaran: "Musatemaran"
  pusgivah: "Pusgivah"
  frankrani: "Frankrani"
+ mawaqi: "Mawaqi"
 
  almurtafan_group: "Almurtafan"
  sefertian: "Sefertian"
