--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -954,7 +954,7 @@
  PROV953: "Siliane"
  PROV954: "Toula"
  PROV955: "Litpere"
- PROV956: "956"
+ PROV956: "Nesan Sea"
  PROV957: "Savanmes"
  PROV958: "Gevapolis"
  PROV959: "Roineus"
@@ -1705,7 +1705,7 @@
  PROV1704: "Dasvabena"
  PROV1705: "Mazbad"
  PROV1706: "Brudzakar"
- PROV1707: "1707"
+ PROV1707: "Damdeenian Coast"
  PROV1708: "Akhalivan"
  PROV1709: "Davirat"
  PROV1710: "Dmainisi"
@@ -2033,10 +2033,10 @@
  PROV2032: "Kargapit"
  PROV2033: "Gümatar"
  PROV2034: "North Sazugarat"
- PROV2035: "2035" #!
- PROV2036: "2036"
+ PROV2035: "2035"
+ PROV2036: "Nyanban Gulf"
  PROV2037: "Pinshta"
- PROV2038: "2038"
+ PROV2038: "Geiran Bay"
  PROV2039: "Hitraan"
  PROV2040: "Pakhatarg"
  PROV2041: "Tazaduj"
@@ -2094,7 +2094,7 @@
  PROV2093: "Sagilonar"
  PROV2094: "Tirap"
  PROV2095: "Gaçalpur"
- PROV2096: "2096"
+ PROV2096: "Kwaenan Coast"
  PROV2097: "Gurlamak"
  PROV2098: "Budar"
  PROV2099: "2099"
@@ -2191,7 +2191,7 @@
  PROV2190: "Tengikhar"
  PROV2191: "Jigsür"
  PROV2192: "Khavrytol"
- PROV2193: "2193"
+ PROV2193: "Western Nesan Sea"
  PROV2194: "2194"
  PROV2195: "Joseqan"
  PROV2196: "Shinkhot"
