--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -18,11 +18,11 @@
  emperor_reinforce_imperial_borders_title: "Reinforce Borders of The Empire" 
  emperor_reinforce_imperial_borders: "Reinforced Borders of The Empire"
  emperor_reinforce_imperial_borders_emperor_per_prince: "Reinforced Borders of The Empire"
- emperor_reinforce_imperial_borders_desc: "The first step to securing stability of The Empire is to secure its borders.\n---\nUnlocks "§YFund Fortification construction§!" diplomatic action\n---"
+ emperor_reinforce_imperial_borders_desc: "The first step to securing stability of The Empire is to secure its borders.\n---\nUnlocks \"§YFund Fortification construction§!\" diplomatic action\n---"
  demand_additional_levies_title: "Demand Additional Levies"
  demand_additional_levies_desc: "The Empire is in dire need of manpower to protect the its subject. Our loyal princes will be demanded to offer us additional troops."
  saelian.2.t: "Emperor demands an additional levy"
- saelian.2.d: "Emperor of The Saelian Empire has just sent a request to every prince in the Empire. [Monarch.GetSheHeCap] demands to send him additional levy to "protect the Empire". How shall we respond?"
+ saelian.2.d: "Emperor of The Saelian Empire has just sent a request to every prince in the Empire. [Monarch.GetSheHeCap] demands to send him additional levy to \"protect the Empire\". How shall we respond?"
  saelian.2.a: "We must obey his laws."
  saelian.2.b: "That is beyond our contract."
  fund_fort_construction_title: "Fund Castle Construction"
@@ -32,7 +32,7 @@
 
  emperor_unify_imperial_infrastructure_title: "Unify The Infrastructure"
  emperor_unify_imperial_infrastructure: "Unified Infrastructure"
- emperor_unify_imperial_infrastructure_desc: "Bringing The Empire closer economically will surely help its political situation.\n---\nUnlocks "§PExpand Via Caroli§!" decision\nUnlocks "§PExpand Via Magreini§!" decision\n---"
+ emperor_unify_imperial_infrastructure_desc: "Bringing The Empire closer economically will surely help its political situation.\n---\nUnlocks \"§PExpand Via Caroli§!\" decision\nUnlocks \"§PExpand Via Magreini§!\" decision\n---"
  emperor_unify_imperial_infrastructure_province: "Unified Infrastructure" 
  expand_via_caroli_title: "Expand Via Caroli"
  expand_via_caroli_desc: "Built by Emperor Carol III, is the second longest road in The Empire. It stretches from city of Merkast in the west, through Orenburg, Rotzwasch, Hegenstadt, Pratzau, Rogau, to city of Dorschau in the east."
@@ -44,7 +44,7 @@
  
  emperor_establish_permanent_parliament_title: "Establish Permanent Diet"
  emperor_establish_permanent_parliament: "Permanent Diet Established"
- emperor_establish_permanent_parliament_desc: "Permanent diet will make diplomacy inside The Empire much smoother.\n---\nUnlocks "§YImperial Palace§!" great project\n---\n§YReduces Imperial Diet Cooldown to 5 years§!\n---\n"
+ emperor_establish_permanent_parliament_desc: "Permanent diet will make diplomacy inside The Empire much smoother.\n---\nUnlocks \"§YImperial Palace§!\" great project\n---\n§YReduces Imperial Diet Cooldown to 5 years§!\n---\n"
  saelian.1.t: "Choosing the Place of the Diet"
  saelian.1.d: ""
  saelian.1.a: "Imperial Capital it is."
@@ -54,14 +54,14 @@
  emperor_expand_diplomatic_reach_title: "Expand The Legatorum"
  emperor_expand_diplomatic_reach: "Expanded Legatorum"
  emperor_expand_diplomatic_reach_emperor: "Expanded Legatorum"
- emperor_expand_diplomatic_reach_desc: "Legates are important to imperial interest, being our envoys abord and bringing important information to the Emperor.\n---\nUnlocks "§YFabricate Casus Belli§!" diplomatic action\n---"
+ emperor_expand_diplomatic_reach_desc: "Legates are important to imperial interest, being our envoys abord and bringing important information to the Emperor.\n---\nUnlocks \"§YFabricate Casus Belli§!\" diplomatic action\n---"
  fabricate_casus_belli_title: "Fabricate Insult"
  fabricate_casus_belli_tooltip: "Fabricate Insult which will grant us Casus Belli against target country."
  fabricate_casus_belli_desc: "This will cost us §R[ROOT.GetHowMuchDipCost]§! diplomatic power and will lower targeted country's opinion of us. We Will gain §YDiplomatic Insult§! Casus Belli."
 
  emperor_revive_imperial_inquisition_title: "Revive Imperial Inquisition"
  emperor_revive_imperial_inquisition: "Revived Imperial Inquisition"
- emperor_revive_imperial_inquisition_desc: "Imperial Inquisition was once important organisation within The Empire, but now it has fallen into obscurity.\n---\nUnlocks "§PEnforce Unity of Faith§!" decision\nUnlocks "§YInvestigate Heresy§!" diplomatic action\n---\n"
+ emperor_revive_imperial_inquisition_desc: "Imperial Inquisition was once important organisation within The Empire, but now it has fallen into obscurity.\n---\nUnlocks \"§PEnforce Unity of Faith§!\" decision\nUnlocks \"§YInvestigate Heresy§!\" diplomatic action\n---\n"
  investigate_heresy_title: "Investigate Heresy"
  investigate_heresy_tooltip: "Investigate heresy in their court, demanding them to return to true ways."
  investigate_heresy_desc: "We will demand them to abandon their heresy. If they accept they will convert to our faith and gain §Y100§! Imperial Allegiance. If they decline, we will get §Yholy war§! casus belli against them."
@@ -146,20 +146,20 @@
  no_emperor_reinforce_imperial_borders_title: "Reinforce Borders of The Empire" 
  no_emperor_reinforce_imperial_borders: "Reinforced Borders of The Empire"
  no_emperor_reinforce_imperial_borders_emperor_per_prince: "Reinforced Borders of The Empire"
- no_emperor_reinforce_imperial_borders_desc: "The first step to securing stability of The Empire is to secure its borders.\n---\nUnlocks "§YFund Fortification construction§!" diplomatic action\n---"
+ no_emperor_reinforce_imperial_borders_desc: "The first step to securing stability of The Empire is to secure its borders.\n---\nUnlocks \"§YFund Fortification construction§!\" diplomatic action\n---"
 
  no_emperor_unify_imperial_infrastructure_title: "Unify The Infrastructure"
  no_emperor_unify_imperial_infrastructure: "Unified Infrastructure"
- no_emperor_unify_imperial_infrastructure_desc: "Bringing The Empire closer economically will surely help its political situation.\n---\nUnlocks "§PExpand Via Caroli§!" decision\nUnlocks "§PExpand Via Magreini§!" decision\n---"
+ no_emperor_unify_imperial_infrastructure_desc: "Bringing The Empire closer economically will surely help its political situation.\n---\nUnlocks \"§PExpand Via Caroli§!\" decision\nUnlocks \"§PExpand Via Magreini§!\" decision\n---"
  no_emperor_unify_imperial_infrastructure_province: "Unified Infrastructure" 
 
  no_emperor_establish_permanent_parliament_title: "Establish Permanent Diet"
  no_emperor_establish_permanent_parliament: "Permanent Diet Established"
- no_emperor_establish_permanent_parliament_desc: "Permanent diet will make diplomacy inside The Empire much smoother.\n---\nUnlocks "§YImperial Palace§!" great project\n---\n"
+ no_emperor_establish_permanent_parliament_desc: "Permanent diet will make diplomacy inside The Empire much smoother.\n---\nUnlocks \"§YImperial Palace§!\" great project\n---\n"
 
  no_emperor_revive_imperial_inquisition_title: "Revive Imperial Inquisition"
  no_emperor_revive_imperial_inquisition: "Revived Imperial Inquisition"
- no_emperor_revive_imperial_inquisition_desc: "Imperial Inquisition was once important organisation within The Empire, but now it has fallen into obscurity.\n---\nUnlocks "§PEnforce Unity of Faith§!" decision\nUnlocks "§YInvestigate Heresy§!" diplomatic action\n---\n"
+ no_emperor_revive_imperial_inquisition_desc: "Imperial Inquisition was once important organisation within The Empire, but now it has fallen into obscurity.\n---\nUnlocks \"§PEnforce Unity of Faith§!\" decision\nUnlocks \"§YInvestigate Heresy§!\" diplomatic action\n---\n"
 
  no_emperor_establish_standing_army_title: "Establish Standing Army"
  no_emperor_establish_standing_army: "Established Standing Army"
@@ -269,7 +269,8 @@
 
  unite_saelians_title: "Unify Saelianism"
  unite_saelians_desc: "Bringing Unity to the Saelian faith will solidify us as the rulers of the world. Pro Deo!"
- saelianism_united_mod: "Saelianism Unified"
+ saelianism_united_mod: "Saelia Invicta"
+ desc_saelianism_united_mod: "The saelian faith has been broken for centuries, leading to bretherens fighting each other. Thankfully, these dark times have come to and end and a new Saelian golden age can begin."
  random_conversion_tt: "Every Saelian province will have a 33% chance to convert to our religion."
  hre_modifier_tt: "Reform modifier will be transfered to our newly unified nation."
 
@@ -638,8 +639,8 @@
  TD_SIS_Mint_without_Gold: "Imperial Mint"
  disaster_sis_decay.15.c: "Unify the Infrastructure"
  TD_SIS_Unified_Infrastructure: "Unified the Infrastructure"
- TD_SIS_Unlock_Via_Caroli_tt: "Unlocks "§PExpand Via Caroli§!" decision"
- TD_SIS_Unlock_Via_Magreini_tt: "Unlocks "§PExpand Via Magreini§!" decision"
+ TD_SIS_Unlock_Via_Caroli_tt: "Unlocks \"§PExpand Via Caroli§!\" decision"
+ TD_SIS_Unlock_Via_Magreini_tt: "Unlocks \"§PExpand Via Magreini§!\" decision"
  decision_sis_decay_reforms_economy_title: "Institute Economical Reforms"
  SIS_DECAY_Has_Not_Finished_Economical_Reforms_tt: "Has not finished the Economical Reforms"
  SIS_DECAY_has_not_established_new_mint_tt: "Hasn't established a new mint yet."
@@ -723,14 +724,14 @@
  disaster_sis_decay.22.b: "A new institution is needed."
  decision_sis_decay_question_of_diet_title: "Question of Imperial Diet"
  TD_SIS_Call_emergency_diet_tt: "§GWe shall decide the fate of Imperial Diet§!"
- TD_SIS_Decay_Unlock_Perpetual_diet_decision_tt: "Unlocks "§PEstablish Perpetual Diet§!" decision"
+ TD_SIS_Decay_Unlock_Perpetual_diet_decision_tt: "Unlocks \"§PEstablish Perpetual Diet§!\" decision"
  decision_sis_decay_establish_perpetual_diet_title: "Establish Perpetual Diet"
  TD_SIS_Establish_Permanent_Diet: "Established Permanent Diet"
  desc_TD_SIS_Establish_Permanent_Diet: "The Tetrarchy has established a permanent diet which will periodically convene in the same location."
- TD_SIS_Decay_Unlock_Call_Imperial_diet_decision_tt: "Unlocks "§PHold Imperial Diet§!" decision"
+ TD_SIS_Decay_Unlock_Call_Imperial_diet_decision_tt: "Unlocks \"§PHold Imperial Diet§!\" decision"
  decision_hold_diet_sis_title: "Hold Imperial Diet"
  TD_SIS_Holding_the_diet: "Holding the Imperial Diet"
- TD_SIS_Decay_Unlock_Saelian_Council_decision_tt: "Unlocks "§PEstablish Saelian Council§!" decision"
+ TD_SIS_Decay_Unlock_Saelian_Council_decision_tt: "Unlocks \"§PEstablish Saelian Council§!\" decision"
  decision_sis_decay_establish_saelian_council_title: "Establish Saelian Council"
  TD_SIS_Establish_Saelian_Council: "Established Saelian Council"
  TD_SIS_Decay_Block_Pacification_Path_tt: "§RWe will forever lose ability to pacify empire by force§!"
