--- a/localisation/TD_building_names_l_english.yml
+++ b/localisation/TD_building_names_l_english.yml
@@ -3,3 +3,5 @@
  building_cathedral_yermic: "Great Abadag"
  building_temple_saelian: "Church"
  building_cathedral_saelian: "Cathedral"
+ building_temple_hengtuan: "Shrine"
+ building_cathedral_hengtuan: "Great Temple"
