--- a/localisation/TD_01_flavour_hestan_l_english.yml
+++ b/localisation/TD_01_flavour_hestan_l_english.yml
@@ -22,7 +22,7 @@
  ehwitraw_art_of_revenge: "Art of Revenge"
  ehwitraw_art_of_revenge_desc: "The fights and wars between Ehwitraw and Mewitasr are so ancient that even the oldest folk tales focus on the conflict between the founders of both of our nations. Conflicted merchants, land disputes and even rumors and insults - rulers used anything to justify their hatred towards the other nation, but often only ending in a minor skirmish near the border."
  ehwitraw_nahitar_bastion: "Nahitar Bastion"
- ehwitraw_nahitar_bastion_desc: "The Nahitar faith has been on retreat for some time. Watlistan is slowly embracing the new Kausali faith and Visparaya has already fallen to the foreign faith of Eopedian. Our country is one of the few that still practices this true faith which helped us build our national identity."
+ ehwitraw_nahitar_bastion_desc: "The Nahitar faith has been on retreat for some time. Watlistan is slowly embracing the new Kausali faith and Visparaya has already fallen to the foreign faith of Eopedianism. Our country is one of the few that still practices this true faith which helped us build our national identity."
 
  mewitasri_ideas: "Mewitan Ideas"
  mewitasri_ideas_bonus: "Mewitan Ambition"
