--- a/localisation/TD_trade_companies_l_english.yml
+++ b/localisation/TD_trade_companies_l_english.yml
@@ -28,7 +28,7 @@
  TRADE_COMPANY_DORCHEAN_Trade_Company: "Dorchean Trade Company"
  noordland_company: "Noorden Charter"
  TRADE_COMPANY_NOORDLAND_Root_Culture_GetName: "[Root.Culture.GetName] Noordland Company"
- TRADE_COMPANY_NOORDLAND_Trade_Company: "Nooden Trade Company"
+ TRADE_COMPANY_NOORDLAND_Trade_Company: "Noorden Trade Company"
  eyinar_company: "Eyinar Charter"
  TRADE_COMPANY_EYINAR_Root_Culture_GetName: "[Root.Culture.GetName] Eyinar Company"
  TRADE_COMPANY_EYINAR_Trade_Company: "Eyinar Trade Company"
@@ -209,3 +209,30 @@
  apastra_company: "Apastra Company"
  TRADE_COMPANY_APASTRA_Root_Culture_GetName: "[Root.Culture.GetName] Amajya Company"
  TRADE_COMPANY_APASTRA_Trade_Company: "Apastra Trade Company"
+ kindulia_company: "Kindulian Company"
+ TRADE_COMPANY_KINDULIA_Root_Culture_GetName: "[Root.Culture.GetName] Kindulia Company"
+ TRADE_COMPANY_KINDULIA_Trade_Company: "Kindulia Trade Company"
+ burikati_company: "Burikati Company"
+ TRADE_COMPANY_BURIKATI_Root_Culture_GetName: "[Root.Culture.GetName] Fuhment Company"
+ TRADE_COMPANY_BURIKATI_Trade_Company: "Fuhment Trade Company"
+ pankati_company: "Pankati Company"
+ TRADE_COMPANY_PANKATI_Root_Culture_GetName: "[Root.Culture.GetName] Laut Dalam Company"
+ TRADE_COMPANY_PANKATI_Trade_Company: "Laut Dalam Trade Company"
+ misivid_company: "Misivid Company"
+ TRADE_COMPANY_MISIVID_Root_Culture_GetName: "[Root.Culture.GetName] Saen-Sakha Company"
+ TRADE_COMPANY_MISIVID_Trade_Company: "Saen-Sakha Trade Company"
+ nai_company: "Nài Company"
+ TRADE_COMPANY_NAI_Root_Culture_GetName: "[Root.Culture.GetName] Nài Bay Company"
+ TRADE_COMPANY_NAI_Trade_Company: "Nài Bay Trade Company"
+ ta_trai_company: "Ta-Trâi Company"
+ TRADE_COMPANY_TA_TRAI_Root_Culture_GetName: "[Root.Culture.GetName] Voitak Company"
+ TRADE_COMPANY_TA_TRAI_Trade_Company: "Voitak Trade Company"
+ thboira_company: "Thboira Company"
+ TRADE_COMPANY_THBOIRA_Root_Culture_GetName: "[Root.Culture.GetName] Pipobsa Company"
+ TRADE_COMPANY_THBOIRA_Trade_Company: "Pipobsa Trade Company"
+ tukyeung_company: "Tukyeungian Company"
+ TRADE_COMPANY_TUKYEUNG_Root_Culture_GetName: "[Root.Culture.GetName] Tukyeung Copmpany"
+ TRADE_COMPANY_TUKYEUNG_Trade_Company: "Tukyeung Trade Company"
+ cak_kecig_company: "Cak'kecig Company"
+ TRADE_COMPANY_CAK_KECIG_Root_Culture_GetName: "[Root.Culture.GetName] Bkuslcuht Company"
+ TRADE_COMPANY_CAK_KECIG_Trade_Company: "Bkuslcuht Trade Company"
