--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -95,3 +95,12 @@
  byumgbag_tradenode: "Byumgbag"
  samrsatta_tradenode: "Samrsatta"
  dakara_tradenode: "Dakara"
+ nai_bay_tradenode: "Nài Bay"
+ saen_sakha_tradenode: "Saen-Sakha"
+ ivory_coast_tradenode: "Ivory Coast"
+ kindulia_tradenode: "Kindulia"
+ bokglon_tradenode: "Bokglon"
+ laut_dalam_tradenode: "Laut Dalam"
+ sudian_sea_tradenode: "Sudian Sea"
+ pipobsa_tradenode: "Pipobsa"
+ daraka_tradenode: "Daraka"
