--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2925,7 +2925,7 @@
  PROV2924: "2924"
  PROV2925: "2925"
  PROV2926: "2926"
- PROV2927: "Nai Bay"
+ PROV2927: "Nài Bay"
  PROV2928: "2928"
  PROV2929: "2929"
  PROV2930: "2930"
