--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -32,6 +32,12 @@
  upacaya_estuary_modifier: "Upacaya Estuary"
  pradhana_estuary_modifier: "Pradhana Estuary"
  valvu_estuary_modifier: "Valvu Estuary"
+ bokglon_estuary_modifier: "Bokglon Estuary"
+ phonoa_estuary_modifier: "Phonoa Estuary"
+ makiboh_estuary_modifier: "Makiboh Estuary"
+ kharont_estuary_modifier: "Kharont Estuary"
+ senphab_estuary_modifier: "Senphab Estuary"
+ 
 
  uzkolian_toll: "Uzkolian Toll"
  hre_imperial_road: "Imperial Road"
