--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -96,7 +96,7 @@
  samrsatta_tradenode: "Samrsatta"
  dakara_tradenode: "Dakara"
  nai_bay_tradenode: "Nài Bay"
- saen_sakha_tradenode: "Saen-Sakha"
+ saen_sakha_tradenode: "Phonoa"
  ivory_coast_tradenode: "Ivory Coast"
  kindulia_tradenode: "Kindulia"
  bokglon_tradenode: "Bokglon"
