Kabonen T1 Gov Reform
We are getting lost with this one!

--- a/localisation/TD_01_flavour_bkuslcuht_region_l_english.yml
+++ b/localisation/TD_01_flavour_bkuslcuht_region_l_english.yml
@@ -18,6 +18,9 @@
  kabonen_modernized_ship_design: "Modernized Ship Designs"
  kabonen_modernized_ship_design_desc: "Navy is lifeline of our land, without it, we will cease to exist, crushed by the outside powers. We need to do everything to make sure our ships are best of the best, and to achieve that we will invite forgein ship designers from Mysentria."
  
+ lost_republic_reform: "Lost Republic"
+ lost_republic_reform_desc: "The Republic founded by Yermic Mawaqi merchants that lost their way when sailing east to find a new trade route to Hengtua. Seen as a blight of the earth by all of its neighbours."
+ 
  cak_kecig_group_ideas: "Cak Kecig Minor Ideas"
  cak_kecig_group_ideas_start: "Cak Kecig Minor Traditions"
  cak_kecig_group_ideas_bonus: "Cak Kecig Minor Ambition"
