--- a/localisation/TD_peasants_l_english.yml
+++ b/localisation/TD_peasants_l_english.yml
@@ -10,6 +10,7 @@
  peasants_privilege_slots: "[Country.GetPeasantryName] Max Privileges"
  estate_peasants_ownership: "[Country.GetPeasantryName] Land Ownership"
 
+ EST_VAL_RURAL_GOOD: "Trade Bonus in Grain or Livestock"
 
  estate_peasants_develop_x: "Increase Development in [agenda_province.GetName]"
  estate_peasants_develop_x_desc: "Increasing the development and standard of living of our people in [agenda_province.GetName] would only serve to further our own goals and prosperity."
