--- a/localisation/TD_peasants_l_english.yml
+++ b/localisation/TD_peasants_l_english.yml
@@ -37,5 +37,12 @@
  estate_peasants_advisors: "Lowborn Advisors"
  estate_peasants_advisors_desc: "Allowing peasants to fill positions of advisors will help us to get better understanding of countryside problems."
 
- estate_peasants_free_movement: "Freedom of Movement"
- estate_peasants_free_movement_desc: "Allowing the peasants to freely move across the country will help bring the nation together, but also anger the landowners."
+ estate_peasants_expanded_freedoms: "Expanded Freedoms"
+ estate_peasants_expanded_freedoms_desc: "more rights todo"
+ estate_nobles_protect_rural_nobility: "Protect Rural Nobility"
+ estate_nobles_protect_rural_nobility_desc: "less rights todo"
+
+ estate_peasants_rural_development_effort: "Rural Development Effort"
+ estate_peasants_rural_development_effort_desc: "invest in eastern europe"
+ estate_peasants_rural_development: "Rural Development Effort"
+ estate_peasants_rural_development_effort_effect_tooltip: "Every owned province with Livestock or Grain Trade Goods gains:\nLocal Development Cost: §G-5%§!\nConstruction Time: §G-10§!"
