reenabled some price change events + fixes

--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -94,7 +94,7 @@
  akuariri_tradenode: "Akuariri"
  byumgbag_tradenode: "Byumgbag"
  samrsatta_tradenode: "Samrsatta"
- dakara_tradenode: "Dakara"
+ dakara_tradenode: "Darilena"
  nai_bay_tradenode: "Nài Bay"
  saen_sakha_tradenode: "Phonoa"
  ivory_coast_tradenode: "Ivory Coast"
