--- a/localisation/aow_l_english.yml
+++ b/localisation/aow_l_english.yml
@@ -157,16 +157,16 @@
  MIL_FOCUS_PASSIVE: "Passive"
  MIL_FOCUS_SIEGE: "Siege"
  TRIANGLE_TRADE: "The Triangle Trade"
- prices.1.t: "The Triangle Trade"
- prices.1.d: "When Mysentrian nations started to colonize North and South America, they created large plantations for the production of Cotton, Tobacco & Sugar. First they tried to use the local population as slaves, but they quickly died out where that was tried. Slaves were then imported from Africa, which created a triangular trade system. Mysentria sold textiles, rum & manufactured goods to Africa, Africa sold slaves to America, and America sold cotton, sugar and tobacco to Mysentria."
+ prices.1.t: "Transniheyan slave trade"
+ prices.1.d: "When Mysentrian nations started to colonize Chantlia and Venatia, they created large plantations for the production of Cotton, Tobacco & Sugar. First they tried to use the local population as slaves, but they quickly died out where that was tried. Slaves were then imported from Sahila and Khutigaria, which created a triangular trade system. Mysentria sold textiles, rum & manufactured goods to the east and Sahila, they sold slaves to the new world, and Chantlians sold cotton, sugar and tobacco to Mysentria."
  prices.1.a: "This will increase the demand for Slaves."
- EUROPEANS_IN_CHINA: "Mysentrian Traders in China"
- prices.2.t: "Mysentrian Traders in China"
- prices.2.d: "With a sizeable contingent of Mysentrian Traders in China, the demand for Chinese porcelain has skyrocketed. The Chinese porcelain is demanded by all in Mysentria, and the Chinese only accept silver or gold as payment."
- prices.2.a: "This will increase the demand for Chinaware."
- JOHAN_FRIEDRICH_BOTTGER: "Porcelain Production in Mysentria"
- prices.3.t: "Porcelain in Meissen"
- prices.3.d: "Our inventors have spent some time studying samples of porcelain that our traders have brought back from China. They claim to have discovered the secrets of its production. The samples that they have presented to [Root.Owner.Monarch.GetTitle] [Root.Owner.Monarch.GetName] are certainly very fine, and will bring in considerable wealth if they can be produced in large amounts. They now request our investment to set up a porcelain manufactory which will, they say, allow them to capture the German market for chinaware."
+ EUROPEANS_IN_CHINA: "Mysentrian Traders in the East"
+ prices.2.t: "Mysentrian Traders in Hengtua"
+ prices.2.d: "With a sizeable contingent of Mysentrian Traders in Hengtua, the demand for Dai and Pemenian porcelain has skyrocketed. Porcelain is demanded by all in Mysentria, and the Hengtuans only accept silver or gold as payment."
+ prices.2.a: "This will increase the demand for Peminisile."
+ JOHAN_FRIEDRICH_BOTTGER: "Porcelain Production in Pratzau"
+ prices.3.t: "Porcelain of Pratzau"
+ prices.3.d: "Our inventors have spent some time studying samples of porcelain that our traders have brought back from Hengtua. They claim to have discovered the secrets of its production. The samples that they have presented to [Root.Owner.Monarch.GetTitle] [Root.Owner.Monarch.GetName] are certainly very fine, and will bring in considerable wealth if they can be produced in large amounts. They now request our investment to set up a porcelain manufactory which will, they say, allow them to capture the Silvestrian market for chinaware."
  prices.3.a: "Porcelain shall be our path to riches."
  PROTESTANT_DONT_EAT_FISH: "Protestants Don't Eat Fish"
  prices.4.t: "Protestantism Entrenched"
@@ -174,21 +174,21 @@
  prices.4.a: "This will decrease the demand for Fish."
  COFFEE_BOOM: "Coffee Boom"
  prices.5.t: "Coffee Boom"
- prices.5.d: "Originally a drink largely associated with the Muslim world, coffee has become more and more commonplace even among the Christians in Mysentria. In an increasingly interconnected world acquiring anything, including coffee is no longer quite as hard as it once was. As a result, coffeehouses are increasingly being established in Mysentria and the exotic beans are in increasing demand."
+ prices.5.d: "Originally a drink largely associated with the Yermic world, coffee has become more and more commonplace even among the Saelians in Mysentria. In an increasingly interconnected world acquiring anything, including coffee is no longer quite as hard as it once was. As a result, coffeehouses are increasingly being established in Mysentria and the exotic beans are in increasing demand."
  prices.5.a: "This will increase the price of coffee."
  COTTON_IMPORTS: "Mysentrian Cotton Imports"
  COTTON_IMPORTS_BANNED: "Cotton Imports Banned"
  prices.6.t: "Cotton Imports"
- prices.6.d: "During the Renaissance, Indian cotton fabrics had become increasingly popular in Mysentria. Eventually, the [Root.GetAdjective] wool industry came under intense pressure and demanded a ban on cotton imports."
+ prices.6.d: "During the Renaissance, Samadian and Hestani cotton fabrics had become increasingly popular in Mysentria. Eventually, the [Root.GetAdjective] wool industry came under intense pressure and demanded a ban on cotton imports."
  prices.6.a: "We will not restrict free trade."
  prices.6.b: "Mercantilism is the right way."
  TEA_AND_SUGAR: "Tea and Sugar"
  prices.7.t: "Of Tea and Sugar"
- prices.7.d: "Originally a Chinese beverage, tea quickly became the new [Root.GetAdjective] national drink after its introduction in [Root.GetName]. Mixed with sugar, it is consumed by the rich, the poor and even [Root.Monarch.GetTitle] [Root.Monarch.GetName]."
+ prices.7.d: "Originally a Henlen beverage, tea quickly became the new [Root.GetAdjective] national drink after its introduction in [Root.GetName]. Mixed with sugar, it is consumed by the rich, the poor and even [Root.Monarch.GetTitle] [Root.Monarch.GetName]."
  prices.7.a: "This will increase the demand for tea and sugar."
  SPICE_TRADE: "Spice Trade"
  prices.8.t: "Spice Trade"
- prices.8.d: "The discovery of the East Indian Trade Route has ushered in the age of the Spice Trade. With new trade routes available, controlling the flow of spices like pepper or cinnamon has become more important than ever."
+ prices.8.d: "The clearance of the eastern Trade Route has ushered in the age of the Spice Trade. With new trade routes available, controlling the flow of spices like pepper or cinnamon has become more important than ever."
  prices.8.a: "This will increase the price of spices."
  ABOLITIONISM: "Abolitionism"
  prices.9.t: "Abolitionism"
@@ -2081,11 +2081,11 @@
  prices.15.a: "Ok."
  GREAT_FISHERIES: "Grand Banks Fisheries"
  prices.16.t: "Calicoes & Other Cotton Cloths"
- prices.16.d: "The steady supply of Indian cottons has begun to result in some big changes in Mysentrian cloth consumption. Muslins, calicoes and other cotton cloths are being sold at higher and higher prices in the Mysentrian markets."
+ prices.16.d: "The steady supply of Samadian cottons has begun to result in some big changes in Mysentrian cloth consumption. Muslins, calicoes and other cotton cloths are being sold at higher and higher prices in the Mysentrian markets."
  prices.16.a: "Ok."
  CALICOES: "Calicoes"
  prices.17.t: "Depletion of the Mysentrian Beaver"
- prices.17.d: "The demand for furs has been constantly rising throughout the middle ages and an increasingly colder climate has not done anything to change this lately. Because of this the Mysentrian beaver population is having trouble coping with the constantly growing demand for furs. It has gotten to the point that beavers are very rarely seen in Mysentria at all and furs now have to be imported at great cost from Russia and the far north."
+ prices.17.d: "The demand for furs has been constantly rising throughout the middle ages and an increasingly colder climate has not done anything to change this lately. Because of this the Mysentrian beaver population is having trouble coping with the constantly growing demand for furs. It has gotten to the point that beavers are very rarely seen in Mysentria at all and furs now have to be imported at great cost from Deep Tummland and the far north."
  prices.17.a: "Ok."
  DEPLETION_OF_EUROPEAN_BEAVER: "Depletion of the Mysentrian Beaver"
  prices.18.t: "Felt Hats"
@@ -2109,11 +2109,11 @@
  prices.22.a: "Ok."
  DECLINE_OF_SPICE_TRADE: "Decline of the Spice Trade"
  prices.23.t: "Changing Patterns of Consumption"
- prices.23.d: "Sugar was once a rare luxury that had to be imported from the Maghreb or the Middle East. As the world has opened up and the purchasing power of our urban class has increased, sugar may still be considered a luxury, but quite an affordable one."
+ prices.23.d: "Sugar was once a rare luxury that had to be purchased from Aqerb, Antawil or Visparaya. As the world has opened up and the purchasing power of our urban class has increased, sugar may still be considered a luxury, but quite an affordable one."
  prices.23.a: "Ok."
  POPULARIZATION_OF_SUGAR: "Popularization of Sugar"
  prices.24.t: "Popularization of Silk Fabrics"
- prices.24.d: "Silk has been in high demand throughout the world since long before the middle ages and its procurement was one of the driving forces behind the voyages of discovery in the east. With the greater availability of silk, both raw and woven, the demand for Silk cloth in the west is soaring ever higher."
+ prices.24.d: "Silk has been in high demand throughout the world since long before the middle ages and its procurement was one of the driving forces behind the voyages of reconnecting with the east. With the greater availability of silk, both raw and woven, the demand for Silk cloth in the west is soaring ever higher."
  prices.24.a: "Ok."
  POPULAR_SILK_FABRICS: "Silk fabrics in fashion"
  prices.25.t: "Dye Plantations of Bengal"
