--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -148,7 +148,7 @@
  kingdom_of_the_sun_reform_desc: "These lands are being protected by Lord of the Sun, this title isn't hereditary and can be usurped by any other lord that controls palace of the first lord. Because of this his power over his dominion isn't absolute and his subjects often descend into chaos."
 
  isolationist_monarchy_reform: "Isolationist Monarchy"
- isolationist_monarchy_reform_desc: "Our ruler don't want communicate with other states to maintain security over its domain. Because of that we don't have a lot of state personel that can govern any additional lands."
+ isolationist_monarchy_reform_desc: "Our ruler avoid diplomacy with other states in order to maintain higher level of security and power over his domain. Due to this, we don't have a lot of state personel, making our nation administratively hindered."
 
  manufacturing_monopoly_reform: "Manufacturing Monopolies"
  manufacturing_monopoly_reform_desc: "Our burghers earned the right to be sole providers of advanced goods such as glass, jewelry, tools, textiles and valuable gems."
